# fluoropy

./: .gitignore  CONVENIENCE_METHODS_SUMMARY.md  ENHANCED_SAMPLEFRAME_SUMMARY.md  LAYOUT_AND_ERROR_HANDLING.md  PLOTTING_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  UPDATED_QUICK_REF.md  basic_test.py  pyproject.toml  run_test.py  simple_test.py  test_architecture.py  test_comprehensive_hierarchical.py  test_concentration.py  test_enhanced_sampleframe.py  test_layout_calculation.py  test_sampleframe.py  test_simple_hierarchical.py  test_well_only.py  verify_architecture.py
docs/: ENHANCED_SAMPLEFRAME_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README_PLOTTING.md  UPDATED_IMPLEMENTATION.md  pyproject.toml
docs/Quality Control/: CV.md
docs/Statistics/: Zfactor.md
examples/: analysis_architecture_demo.py  api_design_examples.py  basic_example.py  convenience_methods_pattern.py  dependency_explanations.py  module_privacy.py  multi_plate_example.py  privacy_mechanisms.py  property_privacy.py  refactoring_example.py  underscore_conventions.py  underscore_examples.py  utils_demo.py
fluoropy/: __init__.py
fluoropy/analysis/: __init__.py  curve_fitting.py  normalization.py  quality_control.py  statistics.py
fluoropy/core/: __init__.py  assay.py  fluorophore.py  plate.py  plate_new.py  plotting.py  sample.py  sampleframe.py  well.py
fluoropy/utils/: __init__.py  conversions.py  helpers.py  import_data.py  plate_utils.py  validation.py
tests/: architecture_test_results.txt  debug_concentration_test.py  original_plate.py  quick_sampleframe_test.py  simple_test.py  test_both_apis.py  test_comprehensive_plate.py  test_concentration_ordering.py  test_concentration_sorting.py  test_control_separation.py  test_error_handling.py  test_fix.py  test_fluoropy.py  test_import_data.py  test_import_data_integration.py  test_molecules_and_units.py  test_new_architecture.py  test_new_fold_change_methods.py  test_offset_normalization.py  test_outlier_detection.py  test_plate.py  test_plot_replicates.py  test_plot_replicates_minimal.py  test_reordering_issue.py  test_sampleframe_final.py  test_sampleframe_hierarchical.py  test_simple.py  test_stability.py  test_success.txt  test_synthetic_examples.py  test_validation.py  test_well_only.py  test_zscore_normalization.py  verify_architecture.py
tests/outputs/: reorder_test.txt  stability_test.txt  test_result.txt  test_result_final.txt
